--- a/.github/workflows/daily_digest.yml
+++ b/.github/workflows/daily_digest.yml
@@ -1,1 +1,34 @@
-#
+name: Daily Job Digest
+
+on:
+  schedule:
+    # Runs every day at 7:00 AM Pacific Time (15:00 UTC)
+    - cron: '0 15 * * *'
+  workflow_dispatch:
+    # Allows you to run it manually from GitHub for testing
+
+jobs:
+  run-digest:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+          playwright install chromium
+          playwright install-deps chromium
+
+      - name: Run job digest
+        env:
+          ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+          GMAIL_CREDENTIALS: ${{ secrets.GMAIL_CREDENTIALS }}
+          YOUR_EMAIL: ${{ secrets.YOUR_EMAIL }}
+        run: python digest.py
